# gen_vhost

./: .coverage  Dockerfile  README.md  _config.yml  ats_coverage.py  gen_vhost.json  gen_vhost.xml  main.py  run.sh  run_coverage.py  run_coverage.sh  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  gen_vhost_bug_report.md  gen_vhost_feature_request.md
.github/workflows/: gen_vhost_docker_checker.yml  gen_vhost_package.yml  gen_vhost_package_checker.yml  gen_vhost_py_checker.yml  gen_vhost_python2_publish.yml  gen_vhost_python3_build.yml  gen_vhost_python3_publish.yml  gen_vhost_python_checker.yml  gen_vhost_toc.yaml  gen_vhost_toc.yml  gen_vhost_triage.yml  gen_vhost_triage_label.yml
conf/: gen_vhost.cfg
conf/template/: vhost_perl.template  vhost_php.template  vhost_python.template  vhost_ruby.template  vhost_static.template
docs/source/: conf.py  gen_vhost.application.rst  gen_vhost.application.service.rst  gen_vhost.application.service_bundle.rst  gen_vhost.domain.models.rst  gen_vhost.domain.ports.ifile_gen.rst  gen_vhost.domain.ports.itemplate_provider.rst  gen_vhost.domain.ports.rst  gen_vhost.domain.rst  gen_vhost.engine.rst  gen_vhost.infrastructure.cli_bundle.rst  gen_vhost.infrastructure.file_writer.rst  gen_vhost.infrastructure.gen_vhost_command.rst  gen_vhost.infrastructure.template_provider.rst  gen_vhost.pro.read_template.rst  gen_vhost.pro.write_template.rst  gen_vhost.rst  index.rst  modules.rst
gen_vhost/: __init__.py  engine.py  gen_vhost_bundle.py
gen_vhost/application/: __init__.py  service.py  service_bundle.py
gen_vhost/conf/: .editorconfig  gen_vhost.cfg  gen_vhost.logo  project.yaml
gen_vhost/domain/: __init__.py  models.py
gen_vhost/infrastructure/: __init__.py  cli.py  cli_bundle.py  file_writer.py  (+4 more)
tests/: .coverage  ats_coverage.py  gen_vhost  gen_vhost_coverage.json  gen_vhost_coverage.xml  gen_vhost_test.py  run_coverage.sh  test_domain.py  test_engine.py  test_infrastructure.py  test_service.py
(+29 files in other folders)
